# qzone-exporter

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.vue  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/qzone/: qrcode.rs
src-tauri/tests/: test_qrcode_login.rs
src/views/: Photo.vue  Task.vue
